desktop version finished

--- a/index.html
+++ b/index.html
@@ -4,21 +4,26 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="./style.css">
+	<link rel="stylesheet" href="./css/style.css">
+	<link rel="stylesheet" href="./css/all.min.css">
 	<title>One page web development</title>
 </head>
 <body>
+	<!-- NAVIGATION   -->
 	<nav class="container">
 		<div class="logo">Ethibe</div>
 		<button class="nav_btn">Talk to us</button>
 	</nav>
+	<!-- MAIN  -->
 	<main class="container dark_bg">
+		<!-- BIG TITLE  -->
 		<div class="banner">
 			<h1 class="title">
 				Truly community based Ethical financial app. 
 			</h1>
 			<p>Example: The church of England Financial Community or Elon Musk’s Fans Financial community</p>
 		</div>
+		<!-- QUESTIONS  -->
 		<div class="questions">
 			<div class="question left">
 				<h2>Why?</h2>
@@ -48,6 +53,57 @@
 				<p>Ethibe.com is an Ethical Financial App Truly Based on your Community Ethics and Values. </p>
 			</div>
 		</div>
+		<!-- FEATURES  -->
+		<section class="feat_sec">
+			<h1>features</h1>
+			<div class="features">
+				<div class="feature">
+					<p>	<img class="features_icon" src="./assets/Rec_1.png">Save, spend and invest based on your community values and ethics.</p>
+				</div>
+				<div class="feature">
+					<p><img class="features_icon" src="./assets/Rec2.png">Join a savings club (Ajo Kiko) with member of your community. </p>
+				</div>
+				<div class="feature">
+					
+					<p><img class="features_icon" src="./assets//Rec3.png"> Find and adopt Suitable financial instruments such as life insurance that is in accordance with your community ethics and values.</p>
+				</div>
+				<div class="feature">
+					<p><img class="features_icon" src="./assets//Rec4.png"> Learn and put into practice, directly in our app, financial habits for your financial well-being that are based on your community teachings.</p>
+				</div>
+				<div class="feature">
+					
+					<p><img class="features_icon" src="./assets//Rec5.png"> Lend money to or borrow money from your community members based on your community set rules and regulations.</p>
+				</div>
+				<div class="feature">
+					<p><img class="features_icon" src="./assets//Rec6.png">and more...</p>
+				</div>
+			</div>
+		</section>
 	</main>
+	<footer>
+		<section class="footer_sec container">
+			<div class="call_to_action">
+				<p> 
+					<img src="./assets/oval1.png" alt="oval" class="oval">
+					Want to talk us about investing in Ethibe? Talk to us 
+					<a href="#"><i class="fa-solid fa-arrow-right"></i></a>
+				</p>
+			</div>
+			<div class="call_to_action">
+				<p>
+					<img src="./assets/oval2.png" alt="oval" class="oval">
+					Be the first to know when we launch, Subscribe
+					<a href="#"><i class="fa-solid fa-arrow-right"></i></a>
+				</p>
+			</div>
+			<div class="call_to_action">
+				<p>
+					<img src="./assets/oval3.png" alt="oval" class="oval">
+					Suggest your community
+					<a href="#"><i class="fa-solid fa-arrow-right"></i></a>
+				</p>
+			</div>
+		</section>
+	</footer>
 </body>
 </html>
